Add DOI and URL to 'Cite as'

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -10,22 +10,22 @@
     {% endif %}
   {% endfor %}<br>
   <b>Description: </b>{{ site.description }}<br>
-  <b>Repository: </b><a href="{{ site.github.repository_url}}">{{ site.github.repository_url }}</a><br>
+  <b>Repository: </b><a href="{{ page.schemadotorg.codeRepository }}">{{ page.schemadotorg.codeRepository }}</a><br>
   <b>Version: </b>{{ page.schemadotorg.version }}<br>
   <b>Released: </b>{{ page.schemadotorg.datePublished || date: "%-d %B %Y"}}<br>
   <b>License: </b>{{ page.schemadotorg.license }}<br>
   <b>Keywords: </b>
   {% for keyword in page.schemadotorg.keywords %}
-    {% if forloop.index == 1 %}
-      {{ keyword }}
-    {% else %}
-      , {{ keyword }}
-    {% endif %}
+    {{ keyword }}
+    {%- unless forloop.last == true -%}
+    ,
+    {%- endunless -%}
   {% endfor %}
   <br>
   <br>
   <b>Cite as: </b>
   {%- for author in page.schemadotorg.author -%}
+    {% comment %} Convert first/middle names to initials {% endcomment %}
     {% assign givenNames =  author.givenName | split: ' ' %}
     {% assign initials = '' | split: '' %}
     {% for name in givenNames %}
@@ -38,5 +38,9 @@
     ,
     {%- endunless -%}
   {%- endfor %}
-   ({{ page.schemadotorg.datePublished || date: "%Y" }}). {{ page.schemadotorg.name }} (version {{ page.schemadotorg.version }}).<br>
+   ({{ page.schemadotorg.datePublished || date: "%Y" }}).
+   {{ page.schemadotorg.name }}
+   (version {{ page.schemadotorg.version }}).
+   DOI: DOI here
+   URL: {{ page.schemadotorg.codeRepository }}<br>
 </div>
